tweaked error text in form, fixed spacing in sidebar

--- a/src/App.css
+++ b/src/App.css
@@ -90,11 +90,6 @@
   border-radius: 100%;
   font-size: 180%;
 }
-.controller button:focus {
-  outline: 0;
-  border-color: blue;
-  border-radius: 100%;
-}
 
 .stat-tracker {
   width: 100%;
